--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Comunicazione Alternativa</title>
+  <title>Frasi che cambiano</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="box">
     <div id="frase">Sapevo dall’inizio che non sarebbe stato semplice.</div>
-    <button id="risposta" onclick="avanza()">Ok.</button>
+    <button id="risposta">Ok.</button>
   </div>
 
    <script>
