--- a/index.html
+++ b/index.html
@@ -4,15 +4,116 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Frasi Interattive</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: system-ui, sans-serif;
+      background: #FFD6DD; /* rosa pastello chiaro */
+      color: #1A1A1A; /* scuro tendente al nero */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      margin: 0;
+      text-align: center;
+      padding: 20px;
+      box-sizing: border-box;
+    }
+
+    .box {
+      max-width: 600px;
+      width: 100%;
+      padding: 20px;
+    }
+
+    #frase {
+      font-size: 24px;
+      line-height: 1.4;
+      margin-bottom: 30px;
+      word-wrap: break-word;
+      opacity: 1;
+      transition: opacity 0.5s ease;
+    }
+
+    .fade-out {
+      opacity: 0;
+    }
+
+    button {
+      width: 100%;
+      max-width: 350px; /* bottone ingrandito */
+      padding: 18px 0;
+      font-size: 20px;
+      border-radius: 50px;
+      border: none;
+      cursor: pointer;
+      background: #FFB6C1; /* rosa pastello più intenso */
+      color: #1A1A1A;
+      font-weight: bold;
+      transition: transform 0.2s ease, background 0.2s ease;
+      touch-action: manipulation;
+    }
+
+    button:active {
+      transform: scale(0.95);
+    }
+
+    @media (max-width: 400px) {
+      #frase {
+        font-size: 20px;
+      }
+      button {
+        font-size: 18px;
+      }
+    }
+  </style>
 </head>
 <body>
   <div class="box">
-    <div id="frase" class="fade">Sapevo dall’inizio che non sarebbe stato semplice.</div>
-    <button id="risposta">Ok.</button>
+    <div id="frase">Sapevo dall’inizio che non sarebbe stato semplice.</div>
+    <button id="risposta">ma provare non costa nulla</button>
   </div>
 
-  <script src="script.js" defer></script>
+  <script>
+    const contenuti = [
+      { frase: 'Sapevo dall’inizio che non sarebbe stato semplice.', risposta: 'ma provare non costa nulla' },
+      { frase: 'Qualcosa nel tuo modo mi colpisce.', risposta: 'ci sta' },
+      { frase: 'È vero: la comunicazione potrebbe non essere semplice', risposta: 'e a me piace complicarmi la vita' },
+      { frase: 'Con tutta questa timidezza poi…', risposta: 'e vabbè' },
+      { frase: 'Ci sono mille modi per comunicare.', risposta: 'io non scelgo mai il più semplice' },
+      { frase: 'Potrei avere qualche difetto.', risposta: 'ma questo ancora non è sicuro' },
+      { frase: 'Ma ci provo fino in fondo', risposta: 'se una cosa penso che ne valga la pena' },
+      { frase: 'Non è facile e non lo sarà.', risposta: 'lo so già' },
+      { frase: 'Ma mi dispiacerebbe non provarci fino in fondo', risposta: 'non per qualcosa che già sento' },
+      { frase: 'Ma per la sensazione che ho', risposta: 'magari mi sbaglio eh' },
+      { frase: 'Ma magari no', risposta: 'e quindi...' },
+      { frase: 'Dai almeno sono simpatica', risposta: 'e spero di averti fatta sorridere' },
+      { frase: 'Potevo "osare" di più.', risposta: 'e se me ne darai modo lo farò.' }
+    ];
+
+    let indice = 0;
+
+    window.addEventListener("DOMContentLoaded", () => {
+      const button = document.getElementById("risposta");
+      const frase = document.getElementById("frase");
+
+      button.addEventListener("click", () => {
+        frase.classList.add("fade-out");
+
+        setTimeout(() => {
+          indice++;
+          if (indice >= contenuti.length) {
+            indice = contenuti.length - 1;
+            button.style.display = "none";
+          }
+          frase.innerText = contenuti[indice].frase;
+          button.innerText = contenuti[indice].risposta;
+
+          frase.classList.remove("fade-out");
+        }, 500);
+      });
+    });
+  </script>
 </body>
 </html>
+
 
